# n-body-system

./: .gitignore  Cargo.toml  README.md
assets/texture/: spritesheet.ron
config/: display.ron
src/: main.rs  system.rs
src/body/: coordinate.rs  mod.rs
src/quad_tree/: mod.rs  node.rs  quadrant.rs
src/systems/: body_force_system.rs  body_quad_tree_system.rs  mod.rs
src/vector/: mod.rs
