[package]
name = "particle-system-2d"
version = "0.1.0"
authors = ["pragyandas <pragyandas@msn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rayon = "1.1"

[dependencies.amethyst]
version = "0.15.0"
features = ["metal"]